# social

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  requirements.txt
.github/workflows/: test.yml
base_search_mail_content/: README.rst
fetchmail_thread_default/: README.rst  __manifest__.py
fetchmail_thread_default/demo/: data.xml
fetchmail_thread_default/i18n/: es.po  fetchmail_thread_default.pot  sl.po
fetchmail_thread_default/models/: fetchmail_server.py
fetchmail_thread_default/readme/: CONFIGURE.md  CONTRIBUTORS.md  DESCRIPTION.md  USAGE.md
fetchmail_thread_default/tests/: test_fetchmail.py
fetchmail_thread_default/views/: fetchmail_server_view.xml
mail_activity_cancel_tracking/: README.rst  __manifest__.py
mail_activity_cancel_tracking/data/: mail_template_data.xml
mail_activity_cancel_tracking/i18n/: es.po  gl.po  mail_activity_cancel_tracking.pot
mail_activity_unlink_log/: README.rst
mail_activity_unlink_log/i18n/: gl.po
mail_debrand/i18n/: de.po
mail_gateway/: README.rst  __manifest__.py
mail_gateway/i18n/: es.po  gl.po  it.po
mail_gateway/models/: mail_channel.py  mail_gateway.py  mail_message.py  mail_thread.py  res_partner.py
mail_gateway/views/: res_partner_gateway_channel.xml
mail_gateway/wizards/: mail_compose_gateway_message.py  mail_compose_gateway_message.xml  mail_guest_manage.py  mail_message_gateway_link.py
mail_gateway_telegram/: README.rst
mail_gateway_telegram_standalone/: README.rst  __manifest__.py
mail_gateway_whatsapp/: README.rst  __manifest__.py
mail_layout_force/: README.rst  __manifest__.py
mail_message_search/: README.rst
mail_restrict_send_button/: README.rst
res_company_mastodon_link/: README.rst  __manifest__.py
res_partner_linkedin_link/: README.rst  __manifest__.py
res_partner_mastodon_link/: README.rst  __manifest__.py  hooks.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
telegram_base/: README.rst  __manifest__.py
(+102 files in other folders)
