[project]
name = "odoo-addons-oca-social"
version = "18.0.20250821.1"
dependencies = [
    "odoo-addon-mail_gateway==18.0.*",
    "odoo-addon-mail_gateway_whatsapp==18.0.*",
    "odoo-addon-mail_notification_with_history==18.0.*",
    "odoo-addon-mail_thread_create_nolog==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
