[project]
name = "odoo-addons-oca-social"
version = "18.0.20251114.0"
dependencies = [
    "odoo-addon-mail_activity_unlink_log==18.0.*",
    "odoo-addon-mail_gateway==18.0.*",
    "odoo-addon-mail_gateway_telegram==18.0.*",
    "odoo-addon-mail_gateway_whatsapp==18.0.*",
    "odoo-addon-mail_notification_with_history==18.0.*",
    "odoo-addon-mail_thread_create_nolog==18.0.*",
    "odoo-addon-res_company_mastodon_link==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
