[project]
name = "odoo-addons-oca-social"
version = "18.0.20260626.0"
dependencies = [
    "odoo-addon-fetchmail_thread_default==18.0.*",
    "odoo-addon-mail_activity_cancel_tracking==18.0.*",
    "odoo-addon-mail_activity_unlink_log==18.0.*",
    "odoo-addon-mail_gateway==18.0.*",
    "odoo-addon-mail_gateway_telegram==18.0.*",
    "odoo-addon-mail_gateway_telegram_standalone==18.0.*",
    "odoo-addon-mail_gateway_whatsapp==18.0.*",
    "odoo-addon-mail_notification_with_history==18.0.*",
    "odoo-addon-mail_thread_create_nolog==18.0.*",
    "odoo-addon-res_company_mastodon_link==18.0.*",
    "odoo-addon-res_partner_linkedin_link==18.0.*",
    "odoo-addon-res_partner_mastodon_link==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
